--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "@vorprog/new-package",
-  "version": "1.0.0",
+  "name": "@vorprog/loop",
+  "version": "1.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vorprog/loop.js.git"
+  },
   "main": "src/main.js",
   "license": "ISC",
   "scripts": {
     "tests": "node tests/test.js"
   },
   "devDependencies": {
-    "@vorprog/loop": "^1.0.0",
     "diff": "^5.0.0"
   }
 }
